// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddSeat /> renderRoundButton should render create button component 1`] = `
<div>
  <WithStyles(CreateButton)
    disabled={false}
    loading={false}
    onClick={[Function]}
  />
</div>
`;

exports[`<AddSeat /> renderStandardButton should return view component button 1`] = `
<div>
  <WithStyles(Button)
    color="primary"
    dense={true}
    disabled={false}
    loading={false}
    onClick={[Function]}
    size="extraSmall"
  >
    Add Seat
  </WithStyles(Button)>
</div>
`;

exports[`<AddSeat /> should render correctly 1`] = `
<Fragment>
  <WithStyles(CreateButton)
    disabled={false}
    loading={false}
    onClick={[Function]}
  />
  <WithStyles(Connect(WithSimplifyResaga(SeatDialog)))
    loading={false}
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
  />
</Fragment>
`;
